[project]
name = "maverick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "protobuf>=6.30.2",
    "python-dotenv>=1.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
